Corrijo margen en boton de popup__Section

--- a/Final/acercade.html
+++ b/Final/acercade.html
@@ -178,7 +178,7 @@
           <div class="col-12 col-md-4">
             <p class="text-justify m-0">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium assumenda, quo laudantium velit non aspernatur est placeat ad commodi eius iusto. Ducimus consectetur facilis error. Reiciendis praesentium perspiciatis hic porro?</p>
           </div>
-          <div class="col-12 col-md-4 text-center">
+          <div class="col-12 col-md-4 text-center mt-4 mt-md-0">
             <button class="btn btn-success" id="modalButton" data-toggle="modal" data-target="#exampleModalCenter">Abrir modal</button>
           </div>
         </div>
