--- a/Final/contacto.html
+++ b/Final/contacto.html
@@ -62,13 +62,25 @@
 
     <main class="py-5 bg-light">
         <div class="container">
-            <form>
+            <form class="needs-validation" novalidate>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <input type="text" class="form-control" id="name-form" name="name" placeholder="Nombre">
+                        <input type="text" class="form-control" id="name-form" name="name" placeholder="Nombre" required>
+                        <div class="valid-feedback">
+                          Muy bien!
+                        </div>
+                        <div class="invalid-feedback">
+                          Por favor, completa este campo.
+                        </div>
                     </div>
                     <div class="form-group col-md-6">
-                        <input type="email" class="form-control" id="email-form" name="email" placeholder="Email">
+                        <input type="email" class="form-control" id="email-form" name="email" placeholder="Email" required>
+                        <div class="valid-feedback">
+                          Muy bien!
+                        </div>
+                        <div class="invalid-feedback">
+                          Por favor, ingresa un email valido.
+                        </div>
                     </div>
                 </div>
                 <div class="form-row">
@@ -79,10 +91,19 @@
                             <option>...</option>
                             <option>...</option>
                         </select>
+                        <div class="valid-feedback">
+                          Muy bien!
+                        </div>
                     </div>
                     <div class="form-group col-md-6">
                         <div class="input-group mb-3">
-                            <input type="date" class="form-control" name="date" aria-describedby="descripcionfecha">
+                            <input type="date" class="form-control" name="date" aria-describedby="descripcionfecha" required>
+                            <div class="valid-feedback">
+                              Muy bien!
+                            </div>
+                            <div class="invalid-feedback">
+                              Por favor, completa este campo.
+                            </div>
                             <div class="input-group-append">
                               <span class="input-group-text" id="descripcionfecha"><i class="far fa-calendar-alt"></i></span>
                             </div>
@@ -91,6 +112,9 @@
                 </div>
                 <div class="form-group">
                     <textarea class="form-control" id="mensaje-form" name="message" rows="2" placeholder="Mensaje.."></textarea>
+                    <div class="valid-feedback">
+                      Muy bien!
+                    </div>
                 </div>
                 <div class="form-group">
                   <div class="form-check">
@@ -133,6 +157,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+    <script src="js/validate.js"></script>
 
   </body>
 </html>
